[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/sprites/crazycars-rock-full.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/crazycars-shark-full.png" type="Texture" id=2]
[ext_resource path="res://scripts/microgames/entities/00_01_CrazyCar.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/crazycars-sausage-full.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/sfx/car_vroom.mp3" type="AudioStream" id=5]
[ext_resource path="res://scenes/util/AudioSpeedController.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 10, 5 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 45, 53 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 45, 0, 45, 53 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 45, 53 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 59, 26 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 59, 0, 59, 26 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 118, 0, 59, 26 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "rock",
"speed": 7.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "shark",
"speed": 10.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "sausage",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=16]
radius = 16.0

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 21, 7.5 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 4, 4.5 )

[node name="CrazyCar" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 25 )

[node name="CarSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "shark"

[node name="Hitboxes" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="RockHitbox" type="CollisionShape2D" parent="Hitboxes"]
position = Vector2( 0, -28 )
shape = SubResource( 16 )
disabled = true

[node name="SausageHitbox" type="CollisionShape2D" parent="Hitboxes"]
position = Vector2( -1, -12.5 )
shape = SubResource( 26 )
disabled = true

[node name="SharkHitbox" type="CollisionShape2D" parent="Hitboxes"]
position = Vector2( -1, -12.5 )
shape = SubResource( 26 )
disabled = true

[node name="EventHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 61440

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventHitbox"]
position = Vector2( 0, -5.5 )
shape = SubResource( 27 )

[node name="VroomSound" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 5 )
bus = "Microgame-SFX"
